cmake_minimum_required(VERSION 3.26)
project(Studying)

set(CMAKE_CXX_STANDARD 23)

add_executable(Studying
        lessons/pointers/source4_14.h
        main.cpp
        lessons/pointers/source4_15.h
        lessons/pointers/source4_16.h
        lessons/pointers/source4_17.h
        lessons/pointers/source4_18.h
)
